; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_start_raw_video.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs.c_start_raw_video.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.obs_core_video }
%struct.obs_core_video = type { i32 }
%struct.video_scale_info = type { i32 }
%struct.video_data = type opaque
%struct.video_data.0 = type opaque

@obs = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @start_raw_video(i32* %0, %struct.video_scale_info* %1, void (i8*, %struct.video_data*)* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca %struct.video_scale_info*, align 8
  %7 = alloca void (i8*, %struct.video_data*)*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.obs_core_video*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.video_scale_info* %1, %struct.video_scale_info** %6, align 8
  store void (i8*, %struct.video_data*)* %2, void (i8*, %struct.video_data*)** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @obs, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store %struct.obs_core_video* %11, %struct.obs_core_video** %9, align 8
  %12 = load %struct.obs_core_video*, %struct.obs_core_video** %9, align 8
  %13 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %12, i32 0, i32 0
  %14 = call i32 @os_atomic_inc_long(i32* %13)
  %15 = load i32*, i32** %5, align 8
  %16 = load %struct.video_scale_info*, %struct.video_scale_info** %6, align 8
  %17 = load void (i8*, %struct.video_data*)*, void (i8*, %struct.video_data*)** %7, align 8
  %18 = bitcast void (i8*, %struct.video_data*)* %17 to void (i8*, %struct.video_data.0*)*
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @video_output_connect(i32* %15, %struct.video_scale_info* %16, void (i8*, %struct.video_data.0*)* %18, i8* %19)
  ret void
}

declare dso_local i32 @os_atomic_inc_long(i32*) #1

declare dso_local i32 @video_output_connect(i32*, %struct.video_scale_info*, void (i8*, %struct.video_data.0*)*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
